<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <TextView
            android:id="@+id/txtclose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="X"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtInfoTitel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/infoBtn3"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:text="@string/infoBtn4a"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:text="@string/infoBtn4b"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:text="@string/infoBtn4c"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/infoBtn4d"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/infoBtn4e"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/infoBtn4f"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/infoBtn4g"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/infoBtn4h"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/infoBtn4i"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>