<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="350dp"
        android:layout_height="375dp"
        android:layout_marginBottom="2dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <TextView
            android:id="@+id/txtclose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="X"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtInfoTitel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/infoBtn4"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:text="@string/infoBtn3a"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/infoBtn3b"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/infoBtn3c"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/infoBtn3d"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/infoBtn3f"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/infoBtn3g"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/infoBtn3h"
            android:textSize="16sp" />


    </LinearLayout>