<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp">
<LinearLayout
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="15dp">

    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:text="X"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtInfoTitel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/infoBtn1"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:text="@string/infoBtn1a"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:text="@string/infoBtn1b"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:text="@string/infoBtn1c"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:text="@string/infoBtn1d"
        android:textSize="16sp" />


</LinearLayout></ScrollView>