<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="2dp"
    android:orientation="vertical"
    android:paddingLeft="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/bg_round">
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/contactTo"
            android:textSize="20sp"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_to"
            android:background="@color/white"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_subject"
        android:hint="Subject"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/et_message"
        android:hint="@string/contactMessage"
        android:padding="10dp"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_send"
        android:text="@string/contactSend"
        android:textSize="25sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round"/>

</LinearLayout>